src/objects/Damage_Report__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Merchandise__c</fullName>
        <label>Merchandise</label>
        <referenceTo>Merchandise__c</referenceTo>
        <relationshipLabel>Damage Reports</relationshipLabel>
        <relationshipName>Damage_Reports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Police_Report_Id__c</fullName>
        <inlineHelpText>If Vandalism or Theft please fill out info from the police report.</inlineHelpText>
        <label>Police Report Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Accident</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Vandalism</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Theft</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Warehouse__c</fullName>
        <formula>Merchandise__r.Warehouse__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Autopopulated from Merchandise Warehouse</inlineHelpText>
        <label>Warehouse</label>
        <type>Text</type>
    </fields>
    <label>Damage Report</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>D{000000}</displayFormat>
        <label>Report Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Damage Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>